# tutorial-notes

./: .gitignore  README.md
Cpp/P10_Simple_PCIE_XYZ_Motor/: CMakeLists.txt  Stepper.h  main.cc  newdef.h  smc4.h  smc4dll.lib
Cpp/P1_Copy_Constructor/: CMakeLists.txt  Foo.cc  Foo.h  main.cc
Cpp/P2_AVX_Demo/: P2_AVX_Demo.cpp  P2_AVX_Demo.sln  P2_AVX_Demo.vcxproj  P2_AVX_Demo.vcxproj.filters
Cpp/P3_C_CPP_BENCHMARK/: Makefile  bench_c.c  bench_cpp.cc
Cpp/P4_LINUX_Framebuffer_Demo/: Makefile  main.c
Cpp/P5_LINUX_Touch_Screen/: Makefile  main.c
Cpp/P6_Revise_someones_code/: CMakeLists.txt  main.cpp
Cpp/P7_Pybind11_demo/: CMakeLists.txt  pybind11_demo.cpp
Cpp/P8_UNIX_TCP_Demo/: CMakeLists.txt  Socket.cc  Socket.h  main.cc
Cpp/P9_Process_Series/S1_CreateChildProcess/: CMakeLists.txt  parent_process.cc  test.cc
Cpp/P9_Process_Series/S2_WriteDataToProcess/: parent_process.cc  test.cc
Python/: conda配置.md
Python/CgiCountPV/: count_page_view.py  lighthttpd.conf  nginx-default
Python/ElectrodePotential/: example_solution.py  finite_diff_solver.py  potential_electrode_well.py  propagate.py
Python/MXNet/: FItArbitrartFunction.py
Qt/D2DWidget/: .gitignore  CMakeLists.txt  README.md  main.cc  mainwindow.cc  mainwindow.h
Qt/D2DWidget/UI/: mainwindow.ui
Qt/D2DWidget/Widgets/: D2DWidget.cc  D2DWidget.h
Qt/GraphicView/GraphicView/: GraphicView.pro
Qt/GraphicView/GraphicView/CreateItems/: CreateItems.pro  Widget.cc  Widget.h
